# pinecone-neo4j-explorer

./: .gitignore  README.md  email_analysis.ipynb  exploration_scotus.ipynb  legal.csv  legal.ipynb  legal2.ipynb  migrdate.ipynb  package.json  pnpm-lock.yaml  process.py  process_emails.ipynb  process_raw.ipynb  process_scotus.ipynb  process_scotus.py  prompt.py  pyproject.toml
enron-explorer/: package.json
enron-explorer/src/: types.d.ts
enron-explorer/src/app/: page.tsx  summarize.ts
enron-explorer/src/app/api/graph/: route.ts
enron-explorer/src/app/api/summarizer/: route.ts
enron-explorer/src/app/components/: Search.tsx
explorer/: package-lock.json  package.json  pnpm-lock.yaml  route.ts  tsconfig.json
explorer/src/: types.d.ts
explorer/src/app/: AppContext.tsx  cypherQuestionsPromptBuilder.ts  globals.css  graphStatsQueries.ts  layout.tsx  page.tsx  summarize.ts
explorer/src/app/actions/: infer.ts  question.ts  schema.ts
explorer/src/app/api/graph/: route.ts
explorer/src/app/api/infer/: route.ts
explorer/src/app/api/opinion/: route.ts
explorer/src/app/api/search/: route.ts
explorer/src/app/api/summarizer/: route.ts
explorer/src/app/components/: App.tsx  CypherResults.tsx  Graph.tsx  Questions.tsx  Search.tsx  SearchInput.tsx  test.md
