[tool.poetry]
name = "pinecone-neo4j"
version = "0.1.0"
description = ""
authors = ["Roie Schwaber-Cohen <roie.cohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
pandas = "^2.2.2"
neo4j = "^5.21.0"
python-dotenv = "^1.0.1"
pinecone-client = "^4.1.1"
textwrap3 = "^0.9.2"
openai = "^1.35.4"
fuzzywuzzy = "^0.18.0"
flatten-json = "^0.1.14"
tabulate = "^0.9.0"
tinydb = "^4.8.0"
requests = "^2.32.3"
spacy = "^3.7.5"
numpy = ">=1.19.5,<1.27.0"
scipy = "1.12"
bs4 = "^0.0.2"
ipywidgets = "^8.1.3"
notebook = "^7.2.1"
jupyterlab-widgets = "^3.0.11"
widgetsnbextension = "^4.0.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
